<?php

declare(strict_types=1);

namespace App\Domain\ValueObject;

final class UserId extends AbstractId
{
}
